--- a/app/src/main/res/layout/sublayout_listview_main.xml
+++ b/app/src/main/res/layout/sublayout_listview_main.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/item_linearlayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
     android:orientation="vertical">
 
     <LinearLayout
@@ -13,26 +16,23 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/cont_name_textview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:textSize="15dp"
-            android:textColor="@color/commonTextDefault"/>
-
-        <TextView
             android:id="@+id/cont_state_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
             android:textSize="13dp"
-            android:textColor="@color/commonTextGrayDeep"/>
+            android:textColor="@color/colorBlue"/>
+
+        <TextView
+            android:id="@+id/cont_name_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16dp"
+            android:textColor="@color/commonTextDefault"/>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="5dp"
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
@@ -40,8 +40,7 @@
             android:id="@+id/cont_date_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:textSize="15dp"
+            android:textSize="14dp"
             android:textColor="@color/commonTextMiddle"/>
     </LinearLayout>
 
@@ -58,14 +57,14 @@
             android:layout_height="wrap_content"
             android:maxLines="10"
             android:ellipsize="end"
-            android:layout_marginLeft="10dp"
-            android:textSize="14dp"
+            android:textSize="15dp"
             android:textColor="@color/commonTextMiddle"/>
     </LinearLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/commonTextGray"/>
+        android:background="@color/commonTextGray"
+        android:layout_marginBottom="10dp"/>
 
 </LinearLayout>
