--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,8 +22,7 @@
             android:background="?android:attr/windowBackground"
             android:textSize="20dp"
             android:textColor="@color/colorPrimary"
-            android:textStyle="bold"
-            android:text="등록 대기"/>
+            android:textStyle="bold"/>
     </LinearLayout>
 
     <LinearLayout
