--- a/app/src/main/res/layout/fragment_main_dashboard.xml
+++ b/app/src/main/res/layout/fragment_main_dashboard.xml
@@ -36,7 +36,8 @@
                     app:cardBackgroundColor="@color/commonTextWhite"
                     app:cardElevation="2dp"
                     app:cardCornerRadius="5dp"
-                    app:cardUseCompatPadding="true">
+                    app:cardUseCompatPadding="true"
+                    android:visibility="gone">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -50,6 +51,7 @@
                             android:layout_weight="1"
                             android:gravity="center_horizontal"
                             android:orientation="horizontal">
+
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
@@ -72,6 +74,7 @@
                             android:layout_weight="1"
                             android:gravity="center_horizontal"
                             android:orientation="horizontal">
+
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
@@ -153,6 +156,7 @@
                             android:gravity="center_horizontal"
                             android:orientation="horizontal"
                             android:layout_weight="1">
+
                             <ImageView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
@@ -183,7 +187,7 @@
                         android:textSize="15dp"
                         android:textColor="@color/commonTextDefault"
                         android:textStyle="bold"
-                        android:text="등록 대기 문서"/>
+                        android:text="등록 대기 계약"/>
 
                     <TextView
                         android:id="@+id/cont_cnt_textview"
@@ -206,7 +210,7 @@
                     android:background="@drawable/card_rounded_primary"
                     android:gravity="center_horizontal"
                     android:textColor="@color/colorAccent"
-                    android:text="등록 대기 문서가 없습니다."
+                    android:text="등록 대기 계약이 없습니다."
                     android:visibility="gone"/>
 
                 <RelativeLayout
