--- a/app/src/main/res/layout/activity_detail_ready.xml
+++ b/app/src/main/res/layout/activity_detail_ready.xml
@@ -1,4 +1,155 @@
 <?xml version="1.0" encoding="utf-8"?>
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="?android:attr/windowBackground"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/back_imageview"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="15dp"
+            android:src="@drawable/ic_arrow_back_black_24dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:gravity="center"
+            android:layout_centerInParent="true"
+            android:textSize="20dp"
+            android:textColor="@color/commonTextDefault"
+            android:textStyle="bold"
+            android:text="계약 상세 정보"/>
+    </RelativeLayout>
+
+    <LinearLayout
+        android:id="@+id/dashboard_nestedscrollview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <LinearLayout
+            android:id="@+id/LinearLayout_Doc"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:visibility="gone">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:padding="25dp"
+                android:background="@drawable/card_rounded_primary"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/cont_state_textview"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="13dp"
+                        android:textColor="@color/colorBlue"/>
+
+                    <TextView
+                        android:id="@+id/cont_name_textview"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="16dp"
+                        android:textColor="@color/commonTextDefault"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/cont_date_textview"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="14dp"
+                        android:textColor="@color/commonTextMiddle"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="10dp"
+                    android:gravity="center_vertical">
+
+                    <TextView
+                        android:id="@+id/cont_detail_textview"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:maxLines="10"
+                        android:ellipsize="end"
+                        android:textSize="15dp"
+                        android:textColor="@color/commonTextMiddle"/>
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/doc_reg_button"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textSize="17dp"
+                    android:textColor="@color/commonTextWhite"
+                    android:textStyle="bold"
+                    android:text="문서 등록"
+                    android:background="@drawable/btn_rounded_primary_fill"/>
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textSize="17dp"
+                    android:textColor="@color/commonTextWhite"
+                    android:textStyle="bold"
+                    android:text="등록 완료"
+                    android:background="@drawable/btn_rounded_red_fill"/>
+            </LinearLayout>
+
+            <GridView xmlns:android="http://schemas.android.com/apk/res/android"
+                android:id="@+id/GridView_Doc"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:background="@color/Common_Divider_Gray"
+                android:numColumns="3"
+                android:verticalSpacing="2dp"
+                android:horizontalSpacing="2dp"
+                android:stretchMode="columnWidth"
+                android:scrollbars="none"
+                android:gravity="center"
+                android:overScrollMode="never">
+            </GridView>
+        </LinearLayout>
+    </LinearLayout>
+</LinearLayout>
+<!--
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -44,7 +195,6 @@
         android:paddingLeft="15dp">
 
         <android.support.v4.widget.NestedScrollView
-            android:id="@+id/dashboard_nestedscrollview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentStart="true"
@@ -54,10 +204,12 @@
             android:scrollbars="none">
 
             <LinearLayout
+                android:id="@+id/dashboard_nestedscrollview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:visibility="gone">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -126,6 +278,7 @@
                     android:orientation="horizontal">
 
                     <Button
+                        android:id="@+id/doc_reg_button"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -147,6 +300,27 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/LinearLayout_Doc"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:visibility="gone">
+
+                    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
+                        android:id="@+id/GridView_Doc"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:numColumns="3"
+                        android:verticalSpacing="1dp"
+                        android:horizontalSpacing="1dp"
+                        android:stretchMode="columnWidth"
+                        android:scrollbars="none"
+                        android:gravity="center"
+                        android:overScrollMode="never">
+                    </GridView>
+                </LinearLayout>
+
+                &lt;!&ndash;<LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
@@ -161,21 +335,8 @@
                         android:textStyle="bold"
                         android:text="계약 날인"
                         android:background="@drawable/btn_rounded_red_fill"/>
-                </LinearLayout>
-
-                <GridView xmlns:android="http://schemas.android.com/apk/res/android"
-                    android:id="@+id/doc_gridview"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:numColumns="3"
-                    android:verticalSpacing="1dp"
-                    android:horizontalSpacing="1dp"
-                    android:stretchMode="columnWidth"
-                    android:scrollbars="none"
-                    android:gravity="center"
-                    android:overScrollMode="never">
-                </GridView>
+                </LinearLayout>&ndash;&gt;
             </LinearLayout>
         </android.support.v4.widget.NestedScrollView>
     </android.support.v4.widget.SwipeRefreshLayout>
-</android.support.constraint.ConstraintLayout>
+</android.support.constraint.ConstraintLayout>-->
