--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -5,6 +5,12 @@
         <item>삭제</item>
     </string-array>
 
+    <string-array name="photo_act">
+        <item>확대보기</item>
+        <item>수정</item>
+        <item>삭제</item>
+    </string-array>
+
     <string-array name="photo_select">
         <item>앨범</item>
         <item>카메라</item>
