날인 등록 / 날인 완료 구현

--- a/app/src/main/res/layout/activity_detail_complete.xml
+++ b/app/src/main/res/layout/activity_detail_complete.xml
@@ -63,7 +63,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="13dp"
-                        android:textColor="@color/colorBlue"/>
+                        android:textColor="@color/colorPrimary"/>
 
                     <TextView
                         android:id="@+id/cont_name_textview"
