--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -3,13 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:background="@color/colorPrimary"
+    android:background="@color/commonTextWhite"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/icImageView"
         android:layout_width="wrap_content"
-        android:layout_height="75dp"
-        android:src="@drawable/ic_logo" />
+        android:layout_height="200dp"
+        android:src="@drawable/ic_launcher_foreground" />
 
 </LinearLayout>
