--- a/app/src/main/res/layout/fragment_main_complete_list.xml
+++ b/app/src/main/res/layout/fragment_main_complete_list.xml
@@ -65,7 +65,7 @@
                     android:background="@drawable/card_rounded_primary"
                     android:gravity="center_horizontal"
                     android:textColor="@color/colorAccent"
-                    android:text="등록 대기 계약이 없습니다."
+                    android:text="날인 완료 계약이 없습니다."
                     android:visibility="gone"/>
 
                 <RelativeLayout
