--- a/app/src/main/res/layout/activity_connect.xml
+++ b/app/src/main/res/layout/activity_connect.xml
@@ -124,11 +124,12 @@
         <Button
             android:id="@+id/btnGoToMain"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="50dp"
             android:layout_marginLeft="40dp"
             android:layout_marginRight="40dp"
             android:background="@drawable/btn_rounded_accent"
             android:text="확인"
+            android:textSize="20dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textAllCaps="false"
             android:textColor="@android:color/white"
