--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -30,7 +30,8 @@
                     android:layout_marginBottom="@dimen/spacing_large"
                     android:layout_marginRight="@dimen/spacing_large"
                     android:gravity="right"
-                    android:textColor="@color/grey_80" />
+                    android:textColor="@color/grey_80"
+                    android:visibility="gone"/>
             </LinearLayout>
 
             <View
