--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,10 +38,23 @@
         android:layout_width="0dp"
         android:layout_height="45dp"
         android:background="?android:attr/windowBackground"
+        android:visibility="gone"
         app:labelVisibilityMode="unlabeled"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:menu="@menu/bottom_nav_menu" />
+
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/nav_view_admin"
+        android:layout_width="0dp"
+        android:layout_height="45dp"
+        android:background="?android:attr/windowBackground"
+        android:visibility="gone"
+        app:labelVisibilityMode="unlabeled"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:menu="@menu/bottom_nav_menu_admin" />
 
 </android.support.constraint.ConstraintLayout>
