--- a/app/src/main/res/layout/fragment_main_dashboard.xml
+++ b/app/src/main/res/layout/fragment_main_dashboard.xml
@@ -115,16 +115,23 @@
                             android:orientation="horizontal"
                             android:layout_weight="1">
 
-                            <ImageView
+                            <!--<ImageView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:src="@drawable/ic_dashboard_gray_24dp"/>
+                                android:src="@drawable/ic_dashboard_gray_24dp"/>-->
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textSize="12dp"
+                                android:text="등록\n대기"
+                                android:textColor="@color/Common_StatusBar_Gray" />
 
                             <TextView
                                 android:id="@+id/cont_n_cnt_textview"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginLeft="10dp"
+                                android:layout_gravity="center"
+                                android:layout_marginLeft="7dp"
                                 android:textSize="16dp"
                                 android:textColor="@color/commonTextMiddle" />
                         </LinearLayout>
@@ -137,16 +144,24 @@
                             android:orientation="horizontal"
                             android:layout_weight="1">
 
-                            <ImageView
+                            <!--<ImageView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:src="@drawable/ic_list_orange_24dp"/>
+                                android:src="@drawable/ic_list_orange_24dp"/>-->
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textSize="12dp"
+                                android:text="날인\n대기"
+                                android:textColor="@color/orange_700" />
 
                             <TextView
                                 android:id="@+id/cont_r_cnt_textview"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginLeft="10dp"
+                                android:layout_gravity="center"
+                                android:layout_marginLeft="7dp"
                                 android:textSize="16dp"
                                 android:textColor="@color/commonTextMiddle" />
                         </LinearLayout>
@@ -159,16 +174,24 @@
                             android:orientation="horizontal"
                             android:layout_weight="1">
 
-                            <ImageView
+                            <!--<ImageView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:src="@drawable/ic_complete_list_blue_24dp"/>
+                                android:src="@drawable/ic_complete_list_blue_24dp"/>-->
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textSize="12dp"
+                                android:text="날인\n완료"
+                                android:textColor="@color/colorBlue" />
 
                             <TextView
                                 android:id="@+id/cont_y_cnt_textview"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginLeft="10dp"
+                                android:layout_gravity="center"
+                                android:layout_marginLeft="7dp"
                                 android:textSize="16dp"
                                 android:textColor="@color/commonTextMiddle" />
                         </LinearLayout>
