날인전/후 문서 수 같아야 날인완료 문서등록 완료시 날인대기로 이동 날인 완료시 날인완료로 이동 하단메뉴 메뉴명TEXT가 이미지와 같이 들어가는 형태로 변경 상단 메뉴 날인대기/완료에도 상단에 상시 표시되도록 수정요청

--- a/app/src/main/res/layout/fragment_main_dashboard.xml
+++ b/app/src/main/res/layout/fragment_main_dashboard.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:id="@+id/dashboard_linearlayout"
     android:visibility="gone">
@@ -115,16 +115,16 @@
                             android:orientation="horizontal"
                             android:layout_weight="1">
 
-                            <!--<ImageView
+                            <ImageView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:src="@drawable/ic_dashboard_gray_24dp"/>-->
-                            <TextView
+                                android:src="@drawable/ic_dashboard_gray_24dp"/>
+                            <!--<TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:textSize="12dp"
                                 android:text="등록\n대기"
-                                android:textColor="@color/Common_StatusBar_Gray" />
+                                android:textColor="@color/Common_StatusBar_Gray" />-->
 
                             <TextView
                                 android:id="@+id/cont_n_cnt_textview"
@@ -144,17 +144,17 @@
                             android:orientation="horizontal"
                             android:layout_weight="1">
 
-                            <!--<ImageView
+                            <ImageView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:src="@drawable/ic_list_orange_24dp"/>-->
+                                android:src="@drawable/ic_list_orange_24dp"/>
 
-                            <TextView
+                            <!--<TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:textSize="12dp"
                                 android:text="날인\n대기"
-                                android:textColor="@color/orange_700" />
+                                android:textColor="@color/orange_700" />-->
 
                             <TextView
                                 android:id="@+id/cont_r_cnt_textview"
@@ -174,17 +174,17 @@
                             android:orientation="horizontal"
                             android:layout_weight="1">
 
-                            <!--<ImageView
+                            <ImageView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:src="@drawable/ic_complete_list_blue_24dp"/>-->
+                                android:src="@drawable/ic_complete_list_blue_24dp"/>
 
-                            <TextView
+                            <!--<TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:textSize="12dp"
                                 android:text="날인\n완료"
-                                android:textColor="@color/colorBlue" />
+                                android:textColor="@color/colorBlue" />-->
 
                             <TextView
                                 android:id="@+id/cont_y_cnt_textview"
