--- a/app/src/main/res/menu/bottom_nav_menu_admin.xml
+++ b/app/src/main/res/menu/bottom_nav_menu_admin.xml
@@ -4,21 +4,21 @@
     <item
         android:id="@+id/navigation_dashboard"
         android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="" />
+        android:title="등록 대기"/>
 
     <item
         android:id="@+id/navigation_list"
         android:icon="@drawable/ic_list_black_24dp"
-        android:title="" />
+        android:title="날인 대기"/>
 
     <item
         android:id="@+id/navigation_complete_list"
         android:icon="@drawable/ic_complete_list_black_24dp"
-        android:title="" />
+        android:title="날인 완료"/>
 
     <item
         android:id="@+id/navigation_admin"
         android:icon="@drawable/ic_key_black_24dp"
-        android:title=""/>
+        android:title="인장 관리자"/>
 
 </menu>
