--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,10 +36,10 @@
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/nav_view"
         android:layout_width="0dp"
-        android:layout_height="45dp"
+        android:layout_height="60dp"
         android:background="?android:attr/windowBackground"
         android:visibility="gone"
-        app:labelVisibilityMode="unlabeled"
+        app:labelVisibilityMode="labeled"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -48,10 +48,10 @@
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/nav_view_admin"
         android:layout_width="0dp"
-        android:layout_height="45dp"
+        android:layout_height="60dp"
         android:background="?android:attr/windowBackground"
         android:visibility="gone"
-        app:labelVisibilityMode="unlabeled"
+        app:labelVisibilityMode="labeled"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
