--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,4 +19,7 @@
     <dimen name="Dialog_ContentLayer_Height">48dp</dimen>
     <dimen name="Common_Content_InnerPadding">16dp</dimen>
     <dimen name="Common_TextSize_Item">14dp</dimen>
+
+    <dimen name="design_bottom_navigation_text_size">10sp</dimen>
+    <dimen name="design_bottom_navigation_active_text_size">10sp</dimen>
 </resources>
