--- a/app/src/main/res/layout/activity_detail_ready.xml
+++ b/app/src/main/res/layout/activity_detail_ready.xml
@@ -25,7 +25,7 @@
             android:gravity="center"
             android:layout_centerInParent="true"
             android:textSize="20dp"
-            android:textColor="@color/commonTextDefault"
+            android:textColor="@color/colorPrimary"
             android:textStyle="bold"
             android:text="계약 상세"/>
     </RelativeLayout>
